Issue 33 fixed, The title’s background is transparent and in mobile view, the text is overlapping with the background and makes it harder to read the titles. By Hamed Jalali

--- a/src/components/AboutUs.module.css
+++ b/src/components/AboutUs.module.css
@@ -7,9 +7,9 @@
 }
 .container h2{
     padding: 2rem 0rem 0rem 0rem;
-    background-color: #e08a2f93;
+    background-color: #e39848;
     width: 400px;
-    color: aliceblue;
+    color: rgb(228, 228, 228);
     border-radius: 30px;
 }
 .text{
